[tool.poetry]
name = "repyblik"
version = "0.1.0"
description = "Simple scripts and library to access the API of the online newspaper REPUBLIK"
authors = ["Tiziano Müller <tm@dev-zero.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
click = "^7.1.2"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"

[tool.poetry.scripts]
repyblik = "repyblik.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
